--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,15 @@ body {
   height: 32px;
   object-fit: contain;
 }
+
+.marker-cluster {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Montserrat, sans-serif;
+  font-weight: 600;
+  color: #73628A;
+  background-color: #EAEAEA;
+  border-radius: 100px;
+  border: 3px solid #73628A;
+}
