--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
+  font-family: Inter, sans-serif;
+  font-size: 14px;
 }
 
 .marker-btn {
@@ -18,12 +20,11 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: Montserrat, sans-serif;
   font-weight: 600;
-  color: #73628A;
+  color: #6b6b76;
   background-color: #EAEAEA;
   border-radius: 100px;
-  border: 3px solid #73628A;
+  border: 3px solid #67C6B9;
 }
 
 .control-panel {
@@ -35,9 +36,24 @@ body {
   box-shadow: 0 2px 4px rgba(0,0,0,0.3);
   padding: 12px 24px;
   margin: 20px;
-  font-size: 13px;
-  line-height: 2;
+  font-size: 14px;
   color: #6b6b76;
-  text-transform: uppercase;
   outline: none;
+}
+
+
+
+.mapboxgl-popup .mapboxgl-popup-content {
+  padding: 25px 20px;
+}
+
+.mapboxgl-popup-content ul{
+  padding-left: 0;
+}
+.mapboxgl-popup-content li{
+  list-style: none; 
+}
+
+.mapboxgl-popup-content span {
+  font-weight: 700;
 }
